<resources>
    <string name="app_name">GotoEsig</string>
    <string name="title_activity_drawer">Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Déconnexion</string>
    <string name="action_update">Modifier</string>

    <string name="menu_home">Accueil</string>
    <string name="menu_profile">Profil</string>
    <string name="menu_add_road">Ajouter un trajet</string>
    <string name="menu_roads">Mes trajets</string>
    <string name="menu_search_road">Chercher un trajet</string>
    <string name="menu_evaluate">Evaluer un trajet</string>
    <string name="menu_statistiques">Statistiques</string>
    <string name="menu_signout">Déconnexion</string>

    <string-array name="moyens_array">
        <item>Voiture</item>
        <item>Moto</item>
        <item>Métro</item>
        <item>Bus</item>
        <item>Vélo</item>
    </string-array>

    <string-array name="autoroute_array">
        <item>Oui</item>
        <item>Non</item>
    </string-array>
    <string name="title_activity_trajet_map">Map</string>
    <string name="aucun_trajet_en_cours">Aucun trajet en cours</string>
    <string name="mes_trajets_en_cours">Mes trajets en cours</string>
    <string name="trajets_termin_s">Trajets terminés</string>
    <string name="aucun_trajet_termin">Aucun trajet terminé</string>
</resources>
