<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="fr.tchatat.gotoesig.views.fragments.home.HomeFragment"
        android:label="Accueil"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="fr.tchatat.gotoesig.views.fragments.profile.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_add_road"
        android:name="fr.tchatat.gotoesig.views.fragments.trajets.NouveauTrajetFragment"
        android:label="@string/menu_add_road"
        tools:layout="@layout/fragment_add_road" />
    <fragment
        android:id="@+id/nav_my_roads"
        android:name="fr.tchatat.gotoesig.views.fragments.trajets.MesTrajetsFragment"
        android:label="@string/menu_roads"
        tools:layout="@layout/fragment_mes_trajets" />
    <fragment
        android:id="@+id/nav_chercher_trajet"
        android:name="fr.tchatat.gotoesig.views.fragments.trajets.RechercheTrajetFragment"
        android:label="@string/menu_search_road"
        tools:layout="@layout/fragment_chercher_trajet" />
    <fragment
        android:id="@+id/nav_evaluer"
        android:name="fr.tchatat.gotoesig.views.fragments.trajets.EvaluerTrajetFragment"
        android:label="@string/menu_evaluate"
        tools:layout="@layout/fragment_evaluer" />
    <fragment
        android:id="@+id/nav_statistiques"
        android:name="fr.tchatat.gotoesig.views.fragments.statistiques.StatistiquesFragment"
        android:label="@string/menu_statistiques"
        tools:layout="@layout/fragment_statistiques" />

    <!--

        <fragment
            android:id="@+id/nav_slideshow"
            android:name="fr.tchatat.gotoesig.ui.slideshow.SlideshowFragment"
            android:label="@string/menu_slideshow"
            tools:layout="@layout/fragment_slideshow" />

        <fragment
            android:id="@+id/nav_tools"
            android:name="fr.tchatat.gotoesig.ui.tools.ToolsFragment"
            android:label="@string/menu_tools"
            tools:layout="@layout/fragment_tools" />

        <fragment
            android:id="@+id/nav_share"
            android:name="fr.tchatat.gotoesig.ui.share.ShareFragment"
            android:label="@string/menu_share"
            tools:layout="@layout/fragment_share" />
    -->

</navigation>