<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4FAFF">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F4FAFF"
        android:padding="10dp"
        android:textAlignment="viewEnd">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="10dp">

            <TextView
                android:id="@+id/text_slideshow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/lato"
                android:text="@string/mes_trajets_en_cours"
                android:textAlignment="textStart"
                android:textColor="#0D3FA0"
                android:textSize="15sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/trajets_list_en_cours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager">

            </androidx.recyclerview.widget.RecyclerView>

            <ImageView
                android:id="@+id/emptyEnCours"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="85dp"
                android:layout_marginBottom="85dp"
                android:alpha="0.5"
                android:contentDescription="@string/aucun_trajet_en_cours"
                app:srcCompat="@drawable/ic_undraw_online" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            tools:layout_editor_absoluteX="10dp">

            <TextView
                android:id="@+id/text_slideshow2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/lato"
                android:text="@string/trajets_termin_s"
                android:textAlignment="textStart"
                android:textColor="#0D3FA0"
                android:textSize="15sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/trajets_list_termines"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager">

            </androidx.recyclerview.widget.RecyclerView>

            <ImageView
                android:id="@+id/emptyTermines"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="85dp"
                android:layout_marginBottom="85dp"
                android:alpha="0.5"
                android:contentDescription="@string/aucun_trajet_termin"
                app:srcCompat="@drawable/ic_undraw_yoga" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
